# xeno_assessment

./: .gitignore  README.md  docker-compose.yml  spec.md  supabase_schema.sql  test.md  todo.md
backend/: Dockerfile  Dockerfile.worker  alembic.ini  celery_app.py  create_tables.py  pyproject.toml  requirements.txt  seed.py  test_compiler.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_campaign_funnel_stats.py
backend/app/: config.py  database.py  main.py
backend/app/ai/: client.py  prompts.py
backend/app/models/: campaign.py  customer.py  order.py  receipt_event.py
backend/app/routers/: ai.py  analytics.py  auth.py  campaigns.py  customers.py  orders.py  receipts.py  segments.py
backend/app/schemas/: ai.py  auth.py  campaign.py  customer.py  order.py  receipt.py  segment.py
backend/app/services/: auth_service.py  campaign_service.py  customer_service.py  receipt_service.py  segment_service.py
backend/app/tasks/: analytics.py  dispatch.py
backend/app/utils/: filter_compiler.py  jwt.py  pagination.py
backend/crm_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
channel-stub/: Dockerfile  celery_app.py  pyproject.toml  requirements.txt
channel-stub/app/: config.py  main.py
channel-stub/app/routers/: send.py
channel-stub/app/tasks/: simulate.py
channel-stub/channel_stub.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/hooks/: useAIChat.ts  (+7 more)
(+23 files in other folders)
