[project]
name = "crm-backend"
version = "0.1.0"
description = "FastAPI CRM + Celery worker"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "pydantic-settings",
    "pydantic[email]",
    "celery[redis]",
    "redis",
    "httpx",
    "sse-starlette",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "google-genai",
    "slowapi",
    "faker"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
